Add `pino` for logging and improve error handling
Replaced `console.error` with `logger.error` for cleaner error handling by introducing the `pino` logging library. Also updated job tracker and HTML page for consistency and replaced a null return in `DateColumn` with an empty string.

--- a/apps/ethang-vanilla/src/pages/blogs/javascript-standard-library/javascript-standard-library.html
+++ b/apps/ethang-vanilla/src/pages/blogs/javascript-standard-library/javascript-standard-library.html
@@ -250,7 +250,7 @@
             arrays or serialization.
           </td>
           <td class="text-success">
-            <a href="https://github.com/ljharb/qs" target="_blank">qs</a>, Full
+            <a href="https://github.com/balazsbotond/urlcat" target="_blank">urlcat</a>, Full
             support for complex URL management.
           </td>
         </tr>
