--- a/apps/ethang-vanilla/src/pages/blogs/javascript-standard-library/javascript-standard-library.html
+++ b/apps/ethang-vanilla/src/pages/blogs/javascript-standard-library/javascript-standard-library.html
@@ -250,8 +250,9 @@
             arrays or serialization.
           </td>
           <td class="text-success">
-            <a href="https://github.com/balazsbotond/urlcat" target="_blank">urlcat</a>, Full
-            support for complex URL management.
+            <a href="https://github.com/balazsbotond/urlcat" target="_blank"
+              >urlcat</a
+            >, Full support for complex URL management.
           </td>
         </tr>
         <tr>
