Add Vite PWA link and improve image tag formatting
Added a link to Vite PWA in the resources section to enhance navigation to relevant content. Reformatted the image tag for better readability and consistency with the code style.

--- a/apps/ethang-vanilla/src/pages/blogs/local-first/local-first.html
+++ b/apps/ethang-vanilla/src/pages/blogs/local-first/local-first.html
@@ -63,6 +63,9 @@
       >
       (backend sync)
     </li>
+    <li>
+      <a href="https://vite-pwa-org.netlify.app/" target="_blank">Vite PWA</a>
+    </li>
   </ul>
   <p>
     The project starts with a frontend with TanStack Router. I see no need for
@@ -143,7 +146,11 @@
     <li>All local data is synced to the backup service on reconnect.</li>
   </ol>
   <div class="relative w-full h-auto overflow-hidden">
-    <img class="size-full object-contain" src="https://images.ethang.dev/backup-and-restore.png" alt="Backup and restore UI">
+    <img
+      class="size-full object-contain"
+      src="https://images.ethang.dev/backup-and-restore.png"
+      alt="Backup and restore UI"
+    />
   </div>
   <p>
     These simple rules give users enough control to avoid most issues with data
