Remove redundant period in HTML text
This commit removes an unnecessary period within parentheses in the HTML content. The change improves consistency with surrounding text formatting.

--- a/apps/ethang-vanilla/src/pages/blogs/local-first/local-first.html
+++ b/apps/ethang-vanilla/src/pages/blogs/local-first/local-first.html
@@ -50,7 +50,7 @@
         target="_blank"
         >auth.ethang.dev</a
       >
-      (My own auth.)
+      (My own auth)
     </li>
     <li>
       <a href="https://workers.cloudflare.com/" target="_blank"
