Update link to 'cookie-es' in JavaScript blog page
Replaced the link pointing to the 'cookie' npm package with 'cookie-es' for improved accuracy and relevance. This ensures the blog reflects the correct library details.

--- a/apps/ethang-vanilla/src/pages/blogs/javascript-standard-library/javascript-standard-library.html
+++ b/apps/ethang-vanilla/src/pages/blogs/javascript-standard-library/javascript-standard-library.html
@@ -153,8 +153,8 @@
             utilities.
           </td>
           <td class="text-success">
-            <a href="https://www.npmjs.com/package/cookie" target="_blank"
-              >cookie</a
+            <a href="https://www.npmjs.com/package/cookie-es" target="_blank"
+              >cookie-es</a
             >, handles parsing, combining headers, deduplication, and
             normalization.
           </td>
