--- a/apps/dashboard/index.html
+++ b/apps/dashboard/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <link type="image/svg+xml" href="/vite.svg" rel="icon" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Noto+Sans+Mono:wght@100..900&display=swap" rel="stylesheet">
+
     <title>Dashboard</title>
   </head>
   <body>
