--- a/apps/ethang/index.html
+++ b/apps/ethang/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-theme="dark">
+<html data-theme="dark" lang="en">
   <head>
     <meta charset="UTF-8" />
     <link type="image/svg+xml" href="/vite.svg" rel="icon" />
