--- a/apps/ethang/index.html
+++ b/apps/ethang/index.html
@@ -21,6 +21,10 @@
       content="EthanG's personal portfolio and contact site. Discover projects and get in touch."
       property="og:description"
     />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Hepta+Slab:wght@1..900&family=Noto+Sans+Mono:wght@100..900&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
