chore: update dependencies, regenerate pnpm lockfile, compatibility dates, and type definitions
Signed-off-by: ethang <hello@ethang.email>

--- a/apps/network-manager/index.html
+++ b/apps/network-manager/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html lang="en">
+  <!-- eslint-disable-next-line html/require-meta-description,html/require-open-graph-protocol -->
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link type="image/svg+xml" href="/vite.svg" rel="icon" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Tauri + React + Typescript</title>
   </head>
 
