--- a/apps/sterett-client/index.html
+++ b/apps/sterett-client/index.html
@@ -1,36 +1,37 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta content="same-origin" name="view-transition" />
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="/favicon.ico" rel="icon" type="image/svg+xml" />
-  <meta name="theme-color" content="#ffffff" />
-  <link rel="manifest" href="/manifest.json" />
-  <link
-          href="/apple-touch-icon.png"
-          rel="apple-touch-icon"
-          sizes="180x180"
-          type="image/png"
-  />
-  <link
-          href="/favicon-32x32.png"
-          rel="icon"
-          sizes="32x32"
-          type="image/png"
-  />
-  <link
-          href="/favicon-16x16.png"
-          rel="icon"
-          sizes="16x16"
-          type="image/png"
-  />
-  <link href="/favicon.ico" rel="shortcut icon" />
-  <link rel="preconnect" href="https://apicdn.sanity.io" />
-  <title>Sterett Creek Village Trustee</title>
-</head>
-<body class="min-h-screen bg-gradient-to-b from-sky-600 to-sky-50 pt-4">
-<div id="root"></div>
-<script type="module" src="/src/main.tsx"></script>
-</body>
+  <head>
+    <meta content="same-origin" name="view-transition" />
+    <meta charset="UTF-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <link type="image/svg+xml" href="/favicon.ico" rel="icon" />
+    <!-- eslint-disable-next-line html/use-baseline -->
+    <meta content="#ffffff" name="theme-color" />
+    <!-- eslint-disable-next-line html/use-baseline -->
+    <link href="/manifest.json" rel="manifest" />
+    <link
+      type="image/png"
+      href="/apple-touch-icon.png"
+      rel="apple-touch-icon"
+      sizes="180x180"
+    />
+    <link type="image/png" href="/favicon-32x32.png" rel="icon" sizes="32x32" />
+    <link type="image/png" href="/favicon-16x16.png" rel="icon" sizes="16x16" />
+    <link href="/favicon.ico" rel="shortcut icon" />
+    <link href="https://apicdn.sanity.io" rel="preconnect" />
+    <title>Sterett Creek Village Trustee</title>
+    <meta content="Sterett Creek Village Trustee" property="og:title" />
+    <meta content="website" property="og:type" />
+    <meta content="https://sterettcreek.com" property="og:url" />
+    <meta content="/android-chrome-512x512.png" property="og:image" />
+
+    <meta
+      content="Official website of Sterett Creek Village Trustee. Access community information, files, covenants, and meeting minutes."
+      name="description"
+    />
+  </head>
+  <body class="min-h-screen bg-gradient-to-b from-sky-600 to-sky-50 pt-4">
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
