--- a/apps/kill-tony/index.html
+++ b/apps/kill-tony/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+  <!-- eslint-disable-next-line html/require-meta-description,html/require-open-graph-protocol -->
   <head>
     <meta charset="UTF-8" />
     <link type="image/svg+xml" href="/vite.svg" rel="icon" />
