--- a/apps/kill-tony/index.html
+++ b/apps/kill-tony/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link type="image/svg+xml" href="/vite.svg" rel="icon" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Vite + React + TS</title>
+    <title>Kill Tony</title>
   </head>
   <body>
     <div id="root"></div>
