--- a/apps/ethang-angular/src/index.html
+++ b/apps/ethang-angular/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="bg-slate-950 text-slate-200">
 <head>
   <meta charset="utf-8">
   <title>EthangAngular</title>
